--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,15 @@ keywords = ["trinci", "blockchain", "explorer", "rocksdb", "tui"]
 
 [dependencies]
 # TUI dependencies
-tui = "0.17"
-crossterm = "0.22"
+tui = { version = "0.17", default-features = false, features = ['crossterm', 'serde'] }
+crossterm = "0.23"
 # RocksDB dependencies
 merkledb = { git = "https://github.com/affidaty-blockchain/merkledb", default-features = false, features = [
     "rocksdb_snappy",
     "sodiumoxide-crypto",
 ], optional = true }
+serde = {version = "1.0.136", features = ["derive"] }
+serde_json = "1.0.78"
+chrono = { version = "0.4", features = ["serde"] }
+rand = { version = "0.8.4", default-features = false, features = ["std"] }
+thiserror = "1.0"
